logs/mobility/build.make.041.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void doPickupControllerMovements()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:390:60: error: no matching function for call to ‘search(geometry_msgs::Pose2D&)’
 geometry_msgs::Pose2D tempLocation = search(currentLocation);
                                                            ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:390:60: note: candidates are:
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from /usr/include/boost/math/tools/config.hpp:16,
                 from /usr/include/boost/math/special_functions/round.hpp:13,
                 from /opt/ros/indigo/include/ros/time.h:58,
                 from /opt/ros/indigo/include/ros/ros.h:38,
                 from /home/steven/rover_workspace/src/mobility/src/mobility.cpp:1:
/usr/include/c++/4.8/bits/stl_algo.h:4689:5: note: template<class _FIter1, class _FIter2> _FIter1 std::search(_FIter1, _FIter1, _FIter2, _FIter2)
     search(_ForwardIterator1 __first1, _ForwardIterator1 __last1,
     ^
/usr/include/c++/4.8/bits/stl_algo.h:4689:5: note:   template argument deduction/substitution failed:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:390:60: note:   candidate expects 4 arguments, 1 provided
 geometry_msgs::Pose2D tempLocation = search(currentLocation);
                                                            ^
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from /usr/include/boost/math/tools/config.hpp:16,
                 from /usr/include/boost/math/special_functions/round.hpp:13,
                 from /opt/ros/indigo/include/ros/time.h:58,
                 from /opt/ros/indigo/include/ros/ros.h:38,
                 from /home/steven/rover_workspace/src/mobility/src/mobility.cpp:1:
/usr/include/c++/4.8/bits/stl_algo.h:4761:5: note: template<class _FIter1, class _FIter2, class _BinaryPredicate> _FIter1 std::search(_FIter1, _FIter1, _FIter2, _FIter2, _BinaryPredicate)
     search(_ForwardIterator1 __first1, _ForwardIterator1 __last1,
     ^
/usr/include/c++/4.8/bits/stl_algo.h:4761:5: note:   template argument deduction/substitution failed:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:390:60: note:   candidate expects 5 arguments, 1 provided
 geometry_msgs::Pose2D tempLocation = search(currentLocation);
                                                            ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
